Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ url: http://proceedings.mlr.press
 published: 2018-08-09
 layout: proceedings
 series: Proceedings of Machine Learning Research
+issn: 2640-3498
 id: PAPIs-2016
 month: 0
 cycles: false
@@ -40,8 +41,11 @@ baseurl: "/v82"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+plugins:
+- jekyll-remote-theme
+remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
-github:
+ghub:
   edit: true
   repository: v82
 display:
@@ -61,5 +65,6 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
-# Auto generated from /Users/mreid/mlresearch/v82/papis2017-boston.bib
+# Original source:  /Users/neil/mlresearch/bibtex.bib
