--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ volume: 82
 start: 2017-10-24
 end: 2017-10-25
 url: http://proceedings.mlr.press
+author:
+  name: PMLR
 published: 2018-08-09
 layout: proceedings
 series: Proceedings of Machine Learning Research
