--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ author:
   name: PMLR
 published: 2018-08-09
 layout: proceedings
+publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
 id: PAPIs-2016
