--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 ---
 booktitle: Proceedings of The 4th International Conference on Predictive Applications
   and APIs
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 shortname: PAPIs
 year: '2017'
 volume: 82
@@ -44,6 +45,10 @@ baseurl: "/v82"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -71,6 +76,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
