Update URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ year: '2017'
 volume: 82
 start: 2017-10-24
 end: 2017-10-25
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 published: 2018-08-09
